[CXF-3478] Using Message.BASE_PATH when available for determining the endpoint address
git-svn-id: https://svn.apache.org/repos/asf/cxf/trunk@1099421 13f79535-47bb-0310-9956-ffa450edef68